<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/hash_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/spacing_20dp"
                android:minHeight="48dp" />

            <Spinner
                android:id="@+id/request_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_20dp"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/store_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_12dp"
                android:autofillHints=""
                android:hint="@string/store_url"
                android:minHeight="48dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/store_url_hint" />

            <EditText
                android:id="@+id/api_key"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_12dp"
                android:ems="10"
                android:hint="@string/api_key"
                android:minHeight="48dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/unique_developer_key" />

            <EditText
                android:id="@+id/api_secret"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_12dp"
                android:ems="10"
                android:hint="@string/api_secret"
                android:minHeight="48dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/the_developer_s_secret_key_for_authorization_of_the_request" />

            <EditText
                android:id="@+id/tag_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_12dp"
                android:ems="10"
                android:hint="@string/tag_id"
                android:minHeight="48dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/a_fallback_id_for_example_for_networks" />

            <EditText
                android:id="@+id/user_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/spacing_12dp"
                android:hint="@string/user_id"
                android:minHeight="48dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/the_unique_id_of_the_application_user_or_the_email_specified_during_the_registration_process" />

            <EditText
                android:id="@+id/publisher_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/spacing_12dp"
                android:hint="@string/publisher_id"
                android:inputType="numberDecimal"
                android:minHeight="48dp"
                android:text="728" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/id_of_publisher" />


            <EditText
                android:id="@+id/trackingEndPointEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/spacing_12dp"
                android:hint="@string/tracking_base_url"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/trackingEndPointTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/http_url" />

            <EditText
                android:id="@+id/et_base_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/spacing_12dp"
                android:hint="@string/base_url"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/tv_base"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/http_url" />

            <EditText
                android:id="@+id/et_post_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/spacing_12dp"
                android:hint="@string/post_request_url"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/tv_post"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/http_url" />

            <Switch
                android:id="@+id/sh_enable_external_exception_handler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="@dimen/spacing_12dp"
                android:layoutDirection="rtl"
                android:text="@string/external_exception"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <Switch
                android:id="@+id/sh_enable_compression"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="@dimen/spacing_12dp"
                android:layoutDirection="rtl"
                android:text="@string/enable_compression"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <Switch
                android:id="@+id/sh_enable_logs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="@dimen/spacing_12dp"
                android:layoutDirection="rtl"
                android:text="@string/enable_add_logs"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <Button
                android:id="@+id/bm_add_ad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/spacing_20dp"
                android:layout_marginBottom="@dimen/spacing_20dp"
                android:text="@string/init_lib" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>