<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdBannerAdvertisingActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/sr_ad_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_20dp"
                android:entries="@array/banner_type_entries"
                android:minHeight="48dp" />

            <Spinner
                android:id="@+id/sr_close_button_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_20dp"
                android:entries="@array/close_button_type_entries"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/placement_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_12dp"
                android:ems="10"
                android:hint="@string/placementId"
                android:inputType="numberDecimal"
                android:minHeight="48dp"
                android:text="4477551" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/example_1234" />

            <EditText
                android:id="@+id/timeout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_12dp"
                android:ems="10"
                android:hint="@string/timeout"
                android:inputType="numberDecimal"
                android:minHeight="48dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/example_15" />

            <EditText
                android:id="@+id/refresh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_12dp"
                android:ems="10"
                android:hint="@string/refresh"
                android:inputType="numberDecimal"
                android:minHeight="48dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/example_15" />

            <EditText
                android:id="@+id/sizes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_12dp"
                android:hint="@string/sizes"
                android:minHeight="48dp"
                android:text="300x250;" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/example_240x320_400x500" />

            <TextView
                android:id="@+id/tv_title_banner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="@dimen/spacing_20dp"
                android:text="@string/banner_2"
                android:textSize="@dimen/spacing_20dp" />

            <View
                android:id="@+id/divided_line"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="@dimen/spacing_10dp"
                android:background="@android:color/black" />

            <Spinner
                android:id="@+id/sr_close_button_type_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_20dp"
                android:entries="@array/close_button_type_entries"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/placement_id_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_12dp"
                android:ems="10"
                android:text="555555"
                android:hint="@string/placementId"
                android:inputType="numberDecimal"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/tv_example_id_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/example_1234" />

            <EditText
                android:id="@+id/timeout_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_12dp"
                android:ems="10"
                android:hint="@string/timeout"
                android:inputType="numberDecimal"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/tv_example_timeout_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/example_15" />

            <EditText
                android:id="@+id/refresh_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_12dp"
                android:ems="10"
                android:hint="@string/refresh"
                android:inputType="numberDecimal"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/tv_example_refresh_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/example_15" />

            <EditText
                android:id="@+id/sizes_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_12dp"
                android:hint="@string/sizes"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/tv_example_sizes_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/example_240x320_400x500" />

            <Button
                android:id="@+id/bm_add_ad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/spacing_20dp"
                android:text="@string/add_advertisement" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>


</androidx.appcompat.widget.LinearLayoutCompat>